--- a/client/src/components/MyArticles/MyArticles.module.css
+++ b/client/src/components/MyArticles/MyArticles.module.css
@@ -3,7 +3,7 @@
     max-width: 900px;
     margin: 0 auto;
     padding: 2rem 1rem;
-    padding-top: 7rem;
+    padding-top: 9rem;
 }
 
 .header {
