--- a/client/src/components/SubmitArticle/SubmitArticle.module.css
+++ b/client/src/components/SubmitArticle/SubmitArticle.module.css
@@ -4,7 +4,7 @@
     align-items: flex-start;
     justify-content: center;
     padding: 2rem 1rem;
-    padding-top: 7rem;
+    padding-top: 9rem;
 }
 
 .submitCard {
